--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,14 @@ html {
 }
 
 @media only screen and (min-width: 25em) {
+
+  .dino-wrap{
+    display: block;
+    width: 100%;
+    position: relative;
+  }
+
+  .dino {
+    display: flex;
+    position: absolute;
+}
