--- a/css/main.css
+++ b/css/main.css
@@ -17,18 +17,28 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
 img {
   display: block;
   width: 100%;
+
 }
 
 body {
   display: block;
 }
 
-.dino-wrap{
-  display: inline-block;
-  width: 100%;
+.dino-wrap {
+  display: inline;
+  width: 100%;;
+}
+
+.dino:nth-child(2) {
+  display: none;
+}
+
+.dino:nth-child(4) {
+  display: none;
 }
 
 .dino {
@@ -36,19 +46,21 @@ body {
 }
 
 @media only screen and (min-width: 25em) {
-  html {
-     font-size: 100%;
-     line-height: 1.3;
-   }
 
-  .dino-wrap{
-    display: block;
-    width: 100%;
+  html {
+    font-size: 100%;
+    line-height: 1.3;
   }
 
-  .dino {
-    display: inline-block;
-    max-width: 100%;
+  .dino-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+  }
+
+  .dino, .dino:nth-child(4), .dino:nth-child(2) {
+  width: 50%;
+  display: inline-block;
   }
 
 }
@@ -60,14 +72,16 @@ body {
     line-height: 1.4;
   }
 
-  .dino-wrap{
-    display: inline-block;
+  .dino-wrap {
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
   }
 
   .dino {
-    display: inline-block;
+    width: 50%
   }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -77,7 +91,7 @@ body {
     line-height: 1.5;
   }
 
-  .dino-wrap{
+  .dino-wrap {
     display: inline-block;
     width: 100%;
   }
@@ -85,4 +99,5 @@ body {
   .dino {
     display: inline-block;
   }
+
 }
